--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "geneticalgorithm>=1.0.2",
+    "matplotlib>=3.10.7",
+    "numpy>=2.3.4",
+]
