--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.13"
 dependencies = [
     "geneticalgorithm>=1.0.2",
     "matplotlib>=3.10.7",
+    "networkx>=3.5",
     "numpy>=2.3.4",
 ]
