--- a/Frontend_Eingabe/package.json
+++ b/Frontend_Eingabe/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "run": "^1.5.0",
     "vue": "^3.5.22"
   },
   "devDependencies": {
